# doc-gen

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tea.yaml
.github/workflows/: close-tea-pr.yaml
doc_gen/: README.generator.py.md  README.md  file_reader.py  generator.py
scripts/: build.sh
tests/: README.md  test.md
