[tool.poetry]
name = "doc-gen"
version = "0.2.0"
description = ""
authors = ["michaelessiet <emsaa2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
openai = "^1.11.1"
click = "^8.1.7"
ollama = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
